fix: fix visual bugs (z-index, icon size) for offcanvas filters

--- a/src/components/toolbar/toolbar.scss
+++ b/src/components/toolbar/toolbar.scss
@@ -91,6 +91,7 @@ $toolbar_filters-button-icon-pos: 'left' !default;
 
         &--offcanvas {
             margin-right: 3rem;
+            z-index: 1;
         }
     }
 
